2009-06-04  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#116566 Device hangs completely after disconnecting call when
		  device lock is active

	Don't go to HDRM_STATE_TASK_NAV if we have modals.

	* src/mb/hd-wm.h
	* src/mb/hd-wm.c (hd_wm_has_modal_blockers):
	  Factored out the code in hd_comp_mgr_setup_input_viewport()
	  to see if we have any modals.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_effect):
	  Do an ordinary hd_transition_close_app() in this case.
	* src/home/hd-render-manager.c (hd_render_manager_set_state):
	  Don't go to see tasw if we have modals, go to HOME instead.
	* src/util/hd-transition.c (hd_transition_rotate_screen):
	  Don't reset goto_state, it may be set before we're called.

2009-06-04  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-home-view-container.c: Moved away from using ClutterUnit
	  (this is removed in Clutter > 0.9), and added code to handle easing
	  on home view panning.

	Fixes: NB#118976 - Transition speed mismatch when dismissing the applications-submenu
	* data/transitions.ini: modified transition durations at Martin 
	  Gimpl's request. Also fixed strange character that was stopping
	  g_key_file reading the [launcher_forward]duration key.
	* src/launcher/hd-launcher-grid.c: Reduce zoom on launcher subview
	  in/out transitions.
	* src/util/hd-transition.c: lowered overshoot on dialog transitions,
	  actually print a warning message if the transitions file couldn't 
	  be loaded. 	  

	* src/mb/hd-comp-mgr.c: Regression fix: it seems since ~W13 we have
	not been updating areas of the screen except for dialogs and full-
	screen windows.

2009-06-03  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes: NB#120044 Top-most application banners are blocked
	with DND flag set
	
	* src/mb/hd-comp-mgr.c: Apps can always show banners if they're
	topmost, even if they have do-not-disturb set.  Also, atoms are
	atoms, not booleans.

2009-06-03  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
