@@ -76,7 +76,7 @@ angle = 70
 
 # App close transition
 [app_close]
-duration = 300
+duration = 450
 
 # Popup for dialogs and status menu
 [popup]
